--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
 
     steps:
       # implement initial tagname using gitaction
-      - uses: action/github-script@v5
       - name: get tag
+        uses: action/github-script@v5
         id: get-tag
         with:
           github-token: ${{ github.token }}
@@ -46,6 +46,7 @@ jobs:
             return "new"
 
       - name: tag & version
+        uses: action/github-script@v5
         with:
           github-token: ${{ github.token }}
           script: |
