--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,28 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        shell: bash
-
     steps:
       - name: tags
         uses: actions/github-scripts@v5
         with:
           github-token: ${{ github.token }}
-        github-token: ${{ github.token }}
-        script: |
-          github.git.createRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: "refs/tags/devd-testd-to-main",
-            sha: context.sha
-          })
+          script: |
+            t=$(git describe --tags `git rev-list --tags --max-count=1`)
+            if [ -z "$t" ]
+            then
+                log=$(git log --pretty=oneline)
+                t=0.0.0
+            else
+                log=$(git log $t..HEAD --pretty=oneline)
+            fi
+            case "$log" in
+              *#major* ) new=$(semver bump major $t);;
+              *#patch* ) new=$(semver bump patch $t);;
+              * ) new=$(semver bump minor $t);;
+            esac
+            github.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/v$new,
+              sha: context.sha
+            })
