--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           tag_prefix: "v"
           # A string which, if present in a git commit, indicates that a change represents a
           # major (breaking) change, supports regular expressions wrapped with '/'
-          major_pattern: "(MAJOR)"
+          major_pattern: "/(MAJOR) (MAIN) (PROD) (PRODUCTION)/"
           # Same as above except indicating a minor change, supports regular expressions wrapped with '/'
           minor_pattern: "(MINOR)"
           # A string to determine the format of the version output
@@ -33,4 +33,4 @@ jobs:
           # tags like 'v1.0.0' will be recognized.
           short_tags: true
           # If this is set to true, *every* commit will be treated as a new version.
-          bump_each_commit: false
+          bump_each_commit: true
