--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          INITIAL_VERSION: 1.0.0
           RELEASE_BRANCHES: master, main
+          DEFAULT_BUMP: patch
+          VERBOSE: false
