--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,5 @@ jobs:
         with:
           tag: ${{ steps.current_tag.outputs.new_tag }}
           name: Release ${{ steps.current_tag.outputs.new_tag }}
-          body: ${{ steps.current_tag.outputs.changelog }}
+          body: Release ${{ steps.current_tag.outputs.changelog }}
+          draft: true
